Ran Eclipse cleanup.